--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,9 @@
-recursive-include examples *.py
+graft examples
 graft models
 include README.md
 include LICENSE.md
 include AUTHORS.md
 include requirements.txt
 include .gitignore
+global-exclude *.log
+global-exclude *.py[co]
