Update to open source license

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,8 +2,7 @@ graft examples
 graft models
 graft test/test_io
 include README.md
-include LICENSE.md
-include AUTHORS.md
+include LICENSE.txt
 include .gitignore
 global-exclude *.log
 global-exclude *.py[co]
